--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@
 .inputs ul li{
     list-style-type: none;
     line-height: 60px;
-    font-family:cursive;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .input-1{
     margin: 15px 40px;
@@ -127,7 +127,7 @@
 .input-1 ul li{
     list-style-type: none;
     line-height: 40px;
-    font-family:cursive;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .input-2{
     margin: 10px 35px;
@@ -146,5 +146,5 @@
 .input-2 ul li{
     list-style-type: none;
     line-height: 40px;
-    font-family:cursive;
+    font-family:Arial, Helvetica, sans-serif;
 }
