--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@
     padding: 0 15px 10px;
     margin-bottom: 30px;
 }
-.profile ul li{
-    list-style-type: none;
-    font-family: 'Poppins', sans-serif;
-    opacity: 0.8;
+.profile h4{
+    text-align: center;
+    font-family:Verdana, Geneva, Tahoma, sans-serif ;
 }
+
 .banner-row{
     display: flex;
     justify-content: flex-start;
@@ -148,3 +148,9 @@
     line-height: 40px;
     font-family:Arial, Helvetica, sans-serif;
 }
+.end{
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    margin: 20px 0 10px 0;
+}    
